kubernetes/overlays/prod/hub-auth-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub-auth
spec:
  template:
    spec:
      containers:
        - name: hub-auth
          imagePullPolicy: IfNotPresent
