kubernetes/overlays/prod/judge-server-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: judge-server
  labels:
    app: judge-server
spec:
  replicas: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 2
      maxSurge: 2
