kubernetes/overlays/prod/hub-auth-ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hub-auth-ingress
spec:
  rules:
    - host: hub-auth.code-place-dev.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hub-auth
                port:
                  number: 80
  tls:
    - hosts:
        - hub-auth.code-place-dev.kr
